# tournesol

./: .env  .env.development  .env.test  .eslintrc.json  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  MANIFESTO.md  ONBOARDING.md  README.md  SECURITY.md  bandit.yaml  debug_export.sh  fetch-ubuntu-server-image.sh  index.html  inlang.config.js  launch_debug.sh  manage.py  objects.inv  package.json  pkglist.txt  pytest.ini  requirements.txt  setup.sh  tests.sh  tox.ini  tsconfig.json  update_api.sh
backend/: .dockerignore  .flake8  .gitignore  .isort.cfg  .models  .pylintrc  README.md  bandit.yaml  manage.py  openapitools.json  pyproject.toml  pytest.ini  requirements.txt  schema.json  schema.yml
backend/.circleci/: config.yml
backend/backend/: __init__.py  add_videos.gin  add_videos.py  admin.py  apps.py  black_white_email_domain.py  cache_timeout_maxmem.py  constants.py  cycle_preference_inconsistency.py  disagreements.py  model_helpers.py  models.py  new_email_domain_signal.py  python_to_js.py  rating_fields.py  reset_password.py  run_youtube_dl.py  sample_video_active_learning.py  send_email_thread.py  serializers.py  test_cache_timeout_maxmem.py  test_run_youtube_dl.py  toy_preference_dataset.py  user_verify.py  video_property_signals.py  youtube_search.py
backend/backend/api_v2/: constants.py  email_domains.py  error_serializer.py  exception.py  expert_ratings.py  helpers.py  login_signup.py  online_update_context_cache.py  rate_later.py  statistics.py  urls.py  user_information.py  user_preferences.py  video_comments.py  video_ratings.py  video_reports.py  videos.py
backend/backend/management/: get_all_dataframes.py
backend/backend/migrations/: 0001_initial.py  0002_auto_20200511_1658.py  0003_auto_20200511_1710.py  0004_auto_20200511_1719.py  0005_auto_20200511_1722.py  0006_userpreferences_description.py  0007_auto_20200528_1920.py  0008_auto_20200602_2309.py  0009_auto_20200602_2309.py  0010_video_info.py  0011_expertrating_duration_ms.py  0012_auto_20200618_2127.py  0013_videocomment.py  0013_videoreports.py  0014_auto_20200625_2117.py  0014_auto_20200626_2350.py  0015_auto_20200625_2143.py  0015_auto_20200626_2351.py  0016_auto_20200625_2234.py  0016_auto_20200626_2353.py  0017_auto_20200626_2358.py  0018_auto_20200627_0008.py  0019_merge_20200701_2305.py  0019_merge_20200702_1059.py  0020_merge_20200706_1723.py  0021_auto_20200706_2237.py  0022_auto_20200706_1822.py  0023_auto_20200706_2121.py  0024_auto_20200706_2128.py  0025_auto_20200716_0942.py  0026_videorating.py  0027_auto_20200812_1429.py  0028_expertrating_datetime_lastedit.py  0029_auto_20201125_0804.py  0030_auto_20201125_0814.py  0031_auto_20201201_0729.py  0032_auto_20201201_0736.py  0033_auto_20201203_1101.py  0034_auto_20201203_1151.py  0035_auto_20201212_1810.py  (+89 more)
backend/backend/ml_model/: helpers.py  preference_aggregation.py  preference_aggregation_featureless.py  preference_aggregation_featureless_np.py  preference_aggregation_featureless_online.py  preference_aggregation_featureless_online_db.py  preference_aggregation_featureless_tf_dense.py  preference_aggregation_featureless_tf_sparse.py  tqdmem.py  (+1 more)
backend/backoffice/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/core/: admin.py  apps.py  oauth_validator.py  signals.py  validators.py
backend/dev-env/: .gitignore  Dockerfile  create-superuser.exp  docker-compose.yml  run-db-and-local-django.sh  run-docker-compose.sh  settings-tournesol.yaml
backend/django_react/: get_username.py  selenium_config.py  settings.py  urls.py
backend/documentation/: python_dependency.md  settings-tournesol.yaml
backend/faq/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/frontend/: helpers.py  urls.py  views.py
backend/ml/: README.md  core.py  data_utility.py  handle_data.py  hyperparameters.gin  inputs.py  licchavi.py  losses.py  metrics.py  ml_requirements.txt  nodes.py  optimize.py  outputs.py  state.py
backend/ml/dev/: plots.py  (+6 more)
backend/recommendation/: graph.py  recomended_user.py  recommender.py  video.py
backend/settings/: asgi.py  settings.py  urls.py  wsgi.py
backend/ssr/: apps.py  tests.py  urls.py  views.py
backend/templates/: swagger-ui.html
backend/tests/: requirements.txt
backend/tournesol/: admin.py  apps.py  errors.py  query_serializers.py  renderers.py  serializers.py  signals.py  throttling.py  urls.py
backend/twitterbot/: .gitignore  admin.py  apps.py  best_contributors.py  client.py  debug_top_contrib.py  settings.py  top_contributors.py  tournesolbot.py  twitter_api.py  uploader_twitter_account.py
backend/vouch/: admin.py  apps.py  models.py  serializers.py  tests.py  trust_algo.py  trustalgo.py  urls.py  views.py  voting_rights.py
feed-server/: .env.example  .gitignore  README.md  pyproject.toml
feed-server/scripts/: feedgen.py
solidago/: .gitignore  README.md  mkdocs.yml  pyproject.toml
solidago/docs/: CNAME  hooks.py  index.md  primitives.md  tournesol.md
solidago/experiments/: data_analysis.py  engagement.py  engagement_bias.json  engagment_bias.json  hyperparameters.json  info.conf  multiplicator.json  pipeline.py  plot.py  resilience.json  synthetic.py  tournesol.py  toy.json  toy.py
solidago/papers/: commands.tex  common.tex  references.bib
solidago/tests/: __init__.py  __main__.py  generate_test_poll.py  generate_test_polls.py  generate_test_states.py  generator.py  info.conf  pipeline.py  test_aggregation.py  test_collaborative_scaling.py  test_comparisons_to_scores.py  test_data.py  test_generative_export.py  test_generative_model.py  test_judgments.py  test_lipschitrust.py  test_mehestan.py  test_mehestan_individual.py  test_mehestan_primitives.py  test_pipeline.py  test_post_process.py  test_preference_learning.py  test_primitives.py  test_privacy_settings.py  test_resilient_primitives.py  test_scaling.py  test_solvers.py  test_tiny_tournesol.py  test_trust_propagation.py  test_user_models.py  test_utils.py  test_voting_rights.py  test_voting_rights_algo.py
(+3449 files in other folders)
