[project]
name = "tournesol-backend"
version = "0.1.0"
readme = "README.md"
requires-python = "==3.9.*"
dependencies = [
    "atproto==0.0.58",
    "django==4.2.23",
    "django-computed-property==0.3.0",
    "django-cors-headers==4.3.0",
    "django-oauth-toolkit==1.7.1",
    "django-prometheus==2.2.0",
    "django-rest-registration==0.8.2",
    "django-sql-utils==0.6.1",
    "djangorestframework==3.15.2",
    "drf-spectacular==0.26.5",
    "google-api-python-client==2.97.0",
    "google-auth-httplib2==0.1.0",
    "langdetect==1.0.9",
    "matplotlib==3.7.2",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "pillow==10.3.0",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.0",
    "pyyaml==6.0.1",
    "requests==2.32.4",
    "scipy==1.11.3",
    "solidago",
    "tweepy==4.14.0",
]

[project.optional-dependencies]
deploy = [
    "gunicorn==20.1.0",
    "uvicorn[standard]==0.22.0",
]

[dependency-groups]
dev = [
    "bandit==1.8.6",
    "factory-boy==3.2.1",
    "flake8==5.0.4",
    "flake8-html==0.4.2",
    "isort==5.10.1",
    "pylint==2.15.3",
    "pylint-django==2.5.3",
    "pylint-json2html==0.4.0",
    "pytest==7.1.3",
    "pytest-django==4.5.2",
    "pytest-html==3.1.1",
]

[tool.uv]
package = false

[tool.uv.sources]
solidago = { path = "../solidago", editable = true }

[tool.black]
line-length = 99
exclude = '''
/(
  | migrations
)/
'''