[project]
name = "tournesol-backend"
version = "0.1.0"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "atproto==0.0.64",
    "django==4.2.*",
    "django-computed-property==0.3.*",
    "django-cors-headers==4.3.*",
    "django-oauth-toolkit==1.7.*",
    "django-prometheus==2.2.*",
    "django-rest-registration==0.8.*",
    "django-sql-utils==0.6.*",
    "djangorestframework==3.15.*",
    "drf-spectacular==0.26.*",
    "google-api-python-client==2.*",
    "google-auth-httplib2==0.1.*",
    "langdetect==1.*",
    "matplotlib==3.10.*",
    "numpy==2.3.*",
    "pandas==2.2.*",
    "pillow==12.*",
    "psycopg2-binary==2.9.*",
    "python-dotenv==1.*",
    "pyyaml==6.*",
    "requests==2.*",
    "scipy==1.*",
    "solidago",
    "tweepy==4.*",
]

[project.optional-dependencies]
deploy = [
    "gunicorn~=23.0",
    "uvicorn[standard]==0.22.0",
]

[dependency-groups]
dev = [
    "bandit==1.8.*",
    "factory-boy==3.2.*",
    "flake8==5.0.*",
    "flake8-html==0.4.*",
    "isort==5.10.*",
    "pylint==2.15.*",
    "pylint-django==2.*",
    "pylint-json2html==0.4.*",
    "pytest==7.*",
    "pytest-django==4.*",
    "pytest-html==3.*",
]

[tool.uv]
package = false

[tool.uv.sources]
solidago = { path = "../solidago", editable = true }

[tool.black]
line-length = 99
exclude = '''
/(
  | migrations
)/
'''