[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solidago"
authors = [
  { name="Tournesol Association", email="hello@tournesol.app" },
]
description = "A toolbox for Solid Algorithmic Governance"
readme = "README.md"
requires-python = ">=3.13"
license = "LGPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
]
keywords = ["tournesol", "collaborative recommendations", "judgement aggregation", "comparison based", "mehestan"]
dependencies = [
    "pandas>=1.5.3,<3.0",
    "numpy>=2.3",
    "numba==0.63.*",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/tournesol-app/tournesol/tree/main/solidago"
"Bug Tracker" = "https://github.com/tournesol-app/tournesol/issues"
"Documentation" = "https://solidago.tournesol.app"

[project.optional-dependencies]
docs = [
    "mkdocs-material==9.*",
    "mkdocstrings[python]==0.*",
    "markdown-include==0.8.1",
]
test = [
    "pytest >=7.1.3,<9.0.0",
]
torch = [
    "torch>=2.2,<3",
]

[tool.hatch.version]
path = "src/solidago/__version__.py"

[tool.pytest.ini_options]
filterwarnings = []
